css fix for room name overflow media card

--- a/www/css/profile.less
+++ b/www/css/profile.less
@@ -300,6 +300,8 @@
   font-size: 12px;
   float: right;
   text-align: right;
+  max-width: 60px;
+  overflow: hidden;
 }
 
 .card-media-common {
